--- a/Dockerfile.centos6
+++ b/Dockerfile.centos6
@@ -4,6 +4,8 @@ ARG PERL_VERSION=5.30.1
 ARG ASSET_VERSION=local_build
 ARG GREP_EXCLUDE='(ld.so|ld-linux-x86-64.so|libBrokenLocale.so|libSegFault.so|libanl.so|libc.so|libdl.so|libm.so|libmvec.so|libnss_compat.so|libnss_dns.so|libnss_files.so|libpthread.so|libresolv.so|librt.so|libthread_db.so|libutil.so|vdso.so)'
 ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper"
+ARG MAKE_TEST_CMD="make test"
+ARG CPANM_TEST_FLAG=""
 
 
 RUN yum update -y && yum groupinstall -y "Development Tools" && yum install -y curl expat-devel openssl openssl-devel
@@ -13,11 +15,11 @@ RUN curl -s -L https://cpan.metacpan.org/authors/id/S/SH/SHAY/perl-${PERL_VERSIO
   cd perl-${PERL_VERSION} && \
   sh Configure -Dprefix=/opt/perl -des && \
   make && \
-  make test && \
+  ${MAKE_TEST_CMD} && \
   make install && \
   curl -s -L https://cpanmin.us | /opt/perl/bin/perl - App::cpanminus && \
   PATH=/opt/perl/bin:${PATH} cpanm Monitoring::Plugin && \
-  PATH=/opt/perl/bin:${PATH} cpanm ${CPAN_MODULES} --force && \
+  PATH=/opt/perl/bin:${PATH} cpanm --force ${CPANM_TEST_FLAG} ${CPAN_MODULES} && \
   rm -rf /opt/perl/man /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm && \
   cd /opt/perl/lib/site_perl/${PERL_VERSION} && \
   cp -a -f . ../../${PERL_VERSION} && \
