--- a/Dockerfile.alpine3.8
+++ b/Dockerfile.alpine3.8
@@ -2,14 +2,13 @@ FROM alpine:3.8
 
 ARG PERL_VERSION=5.30.1
 ARG ASSET_VERSION=local_build
-ARG GREP_EXCLUDE='(ld.so|ld-linux-x86-64.so|libBrokenLocale.so|libSegFault.so|libanl.so|libc.so|libdl.so|libm.so|libmvec.so|libnss_compat.so|libnss_dns.so|libnss_files.so|libpthread.so|libresolv.so|librt.so|libthread_db.so|libutil.so|vdso.so)'
 ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper"
 ARG MAKE_TEST_CMD="make test"
 ARG CPANM_TEST_FLAG=""
 
 RUN apk --no-cache add build-base gmp-dev zlib-dev gdbm-dev db-dev readline-dev libffi-dev coreutils yaml-dev linux-headers autoconf
 RUN apk --no-cache add openssh-client openssl openssl-dev expat-dev
-RUN apk --no-cache add curl wget git sudo bash bash-doc bash-completion procps findutils
+RUN apk --no-cache add curl wget git sudo bash bash-doc bash-completion procps
 
 RUN curl -s -L https://cpan.metacpan.org/authors/id/S/SH/SHAY/perl-${PERL_VERSION}.tar.gz -o perl-${PERL_VERSION}.tar.gz && \
   tar xzf perl-${PERL_VERSION}.tar.gz && \
@@ -28,7 +27,7 @@ RUN curl -s -L https://cpan.metacpan.org/authors/id/S/SH/SHAY/perl-${PERL_VERSIO
   cd / && \
   rm -rf /opt/perl/lib/site_perl/${PERL_VERSION} /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm
 
-RUN LIBS=$(find /opt/perl -type f -executable -exec ldd {} 2>/dev/null \;|  grep "=>" | egrep -v ${GREP_EXCLUDE} | awk '{print $3}'| sort -u ) && \
+RUN LIBS=$(find /opt/perl -type f -exec ldd {} 2>/dev/null \;|  grep "=>" | grep -v "vdso.so.1" | awk '{print $3}'| sort -u ) && \
   for f in $LIBS; do if [ -e $f ]; then echo "Copying Library: $f" && cp $f /opt/perl/lib/; fi; done
 
 RUN mkdir /assets/ && \
