--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -2,7 +2,7 @@ FROM alpine:3.8
 
 ARG PERL_VERSION=5.30.1
 ARG ASSET_VERSION=local_build
-ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper"
+ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper IO::Socket::INET6"
 ARG MAKE_TEST_CMD="make test"
 ARG CPANM_TEST_FLAG=""
 
@@ -10,11 +10,11 @@ RUN apk --no-cache add build-base gmp-dev zlib-dev gdbm-dev db-dev readline-dev 
 RUN apk --no-cache add openssh-client openssl openssl-dev expat-dev
 RUN apk --no-cache add curl wget git sudo bash bash-doc bash-completion procps
 
-RUN curl -s -L https://cpan.metacpan.org/authors/id/S/SH/SHAY/perl-${PERL_VERSION}.tar.gz -o perl-${PERL_VERSION}.tar.gz && \
+RUN curl -s -L https://www.cpan.org/src/5.0/perl-${PERL_VERSION}.tar.gz -o perl-${PERL_VERSION}.tar.gz && \
   tar xzf perl-${PERL_VERSION}.tar.gz && \
   cd perl-${PERL_VERSION} && \
   sed -i 's!"EST5EDT4"!"EST5EDT4,M4.1.0/02:00:00,M10-5-0/02:00"!' cpan/Time-Piece/t/02core_dst.t && \
-  sh Configure -Dprefix=/opt/perl -des && \
+  sh Configure -Dprefix=/opt/perl -Duserelocatableinc -des && \
   make && \
   ${MAKE_TEST_CMD} && \
   make install && \
