--- a/Dockerfile.centos6
+++ b/Dockerfile.centos6
@@ -3,16 +3,16 @@ FROM centos:6
 ARG PERL_VERSION=5.30.1
 ARG ASSET_VERSION=local_build
 ARG GREP_EXCLUDE='(ld.so|ld-linux-x86-64.so|libBrokenLocale.so|libSegFault.so|libanl.so|libc.so|libdl.so|libm.so|libmvec.so|libnss_compat.so|libnss_dns.so|libnss_files.so|libpthread.so|libresolv.so|librt.so|libthread_db.so|libutil.so|vdso.so)'
-ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper"
+ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper IO::Socket::INET6"
 ARG MAKE_TEST_CMD="make test"
 ARG CPANM_TEST_FLAG=""
 
 RUN yum update -y && yum groupinstall -y "Development Tools" && yum install -y curl expat-devel openssl openssl-devel
 
-RUN curl -s -L https://cpan.metacpan.org/authors/id/S/SH/SHAY/perl-${PERL_VERSION}.tar.gz -o perl-${PERL_VERSION}.tar.gz && \
+RUN curl -s -L https://www.cpan.org/src/5.0/perl-${PERL_VERSION}.tar.gz -o perl-${PERL_VERSION}.tar.gz && \
   tar xzf perl-${PERL_VERSION}.tar.gz && \
   cd perl-${PERL_VERSION} && \
-  sh Configure -Dprefix=/opt/perl -des && \
+  sh Configure -Dprefix=/opt/perl -Duserelocatableinc -des && \
   make && \
   ${MAKE_TEST_CMD} && \
   make install && \
