--- a/Dockerfile.alpine3.8
+++ b/Dockerfile.alpine3.8
@@ -2,7 +2,7 @@ FROM alpine:3.8
 
 ARG PERL_VERSION=5.30.1
 ARG ASSET_VERSION=local_build
-ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper IO::Socket::INET6"
+ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper"
 ARG MAKE_TEST_CMD="make test"
 ARG CPANM_TEST_FLAG=""
 
@@ -21,11 +21,7 @@ RUN curl -s -L https://www.cpan.org/src/5.0/perl-${PERL_VERSION}.tar.gz -o perl-
   curl -s -L https://cpanmin.us | /opt/perl/bin/perl - App::cpanminus && \
   PATH=/opt/perl/bin:${PATH} cpanm Monitoring::Plugin && \
   PATH=/opt/perl/bin:${PATH} cpanm --force --notest ${CPAN_MODULES} && \
-  rm -rf /opt/perl/man /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm && \
-  cd /opt/perl/lib/site_perl/${PERL_VERSION} && \
-  cp -a -f . ../../${PERL_VERSION} && \
-  cd / && \
-  rm -rf /opt/perl/lib/site_perl/${PERL_VERSION} /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm
+  rm -rf /opt/perl/man /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm
 
 RUN LIBS=$(find /opt/perl -type f -exec ldd {} 2>/dev/null \;|  grep "=>" | grep -v "vdso.so.1" | awk '{print $3}'| sort -u ) && \
   for f in $LIBS; do if [ -e $f ]; then echo "Copying Library: $f" && cp $f /opt/perl/lib/; fi; done
