--- a/Dockerfile.centos6
+++ b/Dockerfile.centos6
@@ -3,7 +3,7 @@ FROM centos:6
 ARG PERL_VERSION=5.30.1
 ARG ASSET_VERSION=local_build
 ARG GREP_EXCLUDE='(ld.so|ld-linux-x86-64.so|libBrokenLocale.so|libSegFault.so|libanl.so|libc.so|libdl.so|libm.so|libmvec.so|libnss_compat.so|libnss_dns.so|libnss_files.so|libpthread.so|libresolv.so|librt.so|libthread_db.so|libutil.so|vdso.so)'
-ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper IO::Socket::INET6"
+ARG CPAN_MODULES="DBI JSON LWP LWP::UserAgent LWP::Protocol::https XML::LibXML Text::CSV IO::Socket::SSL Time::Zone HTTP::Response Net::SMTP WWW::Mechanize DateTime Test::Simple Net::SNMP AutoLoader Getopt::Long IO::File Module::Load File::Basename Digest::MD5 Data::Dumper"
 ARG MAKE_TEST_CMD="make test"
 ARG CPANM_TEST_FLAG=""
 
@@ -20,9 +20,6 @@ RUN curl -s -L https://www.cpan.org/src/5.0/perl-${PERL_VERSION}.tar.gz -o perl-
   PATH=/opt/perl/bin:${PATH} cpanm Monitoring::Plugin && \
   PATH=/opt/perl/bin:${PATH} cpanm --force ${CPANM_TEST_FLAG} ${CPAN_MODULES} && \
   rm -rf /opt/perl/man /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm && \
-  cd /opt/perl/lib/site_perl/${PERL_VERSION} && \
-  cp -a -f . ../../${PERL_VERSION} && \
-  cd / && \
   rm -rf /opt/perl/lib/site_perl/${PERL_VERSION} /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm && \
   yum clean all
 
