--- a/Dockerfile.amzn2
+++ b/Dockerfile.amzn2
@@ -1,4 +1,4 @@
-FROM centos:6
+FROM amazonlinux:2
 
 ARG PERL_VERSION=5.34.0
 ARG ASSET_VERSION=local_build
@@ -24,7 +24,7 @@ RUN curl -s -L https://www.cpan.org/src/5.0/perl-${PERL_VERSION}.tar.gz -o perl-
   rm -rf /opt/perl/man /perl-${PERL_VERSION}.tar.gz /perl-${PERL_VERSION} /root/.cpanm && \
   yum clean all
 
-RUN if [ $NETSNMP_INSTALL == "true" ]; then curl -s -L https://sourceforge.net/projects/net-snmp/files/net-snmp/${NETSNMP_VERSION}/net-snmp-${NETSNMP_VERSION}.tar.gz -o net-snmp-${NETSNMP_VERSION}.tar.gz && \
+RUN if test $NETSNMP_INSTALL == "true"; then curl -s -L https://sourceforge.net/projects/net-snmp/files/net-snmp/${NETSNMP_VERSION}/net-snmp-${NETSNMP_VERSION}.tar.gz -o net-snmp-${NETSNMP_VERSION}.tar.gz && \
   tar xzf net-snmp-${NETSNMP_VERSION}.tar.gz && \
   cd net-snmp-${NETSNMP_VERSION} && \
   env PERLPROG=/opt/perl/bin/perl sh ./configure --prefix=/opt/perl --with-perl-modules --with-default-snmp-version="2" --disable-embedded-perl --disable-snmptrapd-subagent --disable-manuals --disable-agent --disable-scripts && \
@@ -34,10 +34,10 @@ RUN if [ $NETSNMP_INSTALL == "true" ]; then curl -s -L https://sourceforge.net/p
   ; fi
 
 RUN LIBS=$(find /opt/perl -type f -executable -exec ldd {} 2>/dev/null \;|  grep "=>" | egrep -v ${GREP_EXCLUDE} | awk '{print $3}'| sort -u ) && \
-  for f in $LIBS; do if [ -e $f ]; then echo "Copying Library: $f" && cp $f /opt/perl/lib/; fi; done
+  for f in $LIBS; do if test -e $f; then echo "Copying Library: $f" && cp $f /opt/perl/lib/; fi; done
 
 RUN mkdir /assets/ && \
-  export SENSU_ASSET="/assets/sensu-perl-runtime_${ASSET_VERSION}_perl-${PERL_VERSION}_$([[ $NETSNMP_INSTALL == "true" ]] && echo net-snmp-${NETSNMP_VERSION}_)$(source /etc/os-release && echo $ID$VERSION_ID)_$(uname -s | tr '[:upper:]' '[:lower:]')_amd64.tar.gz" && \
+  export SENSU_ASSET="/assets/sensu-perl-runtime_${ASSET_VERSION}_perl-${PERL_VERSION}_$(test $NETSNMP_INSTALL == "true" && echo net-snmp-${NETSNMP_VERSION}_)$(source /etc/os-release && echo $ID$VERSION_ID)_$(uname -s | tr '[:upper:]' '[:lower:]')_amd64.tar.gz" && \
   tar -czf $SENSU_ASSET -C /opt/perl/ . && \
   ls -l $SENSU_ASSET
 
